[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Center" type="CenterContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Center"]
margin_left = 215.0
margin_top = 590.0
margin_right = 504.0
margin_bottom = 690.0
custom_constants/separation = 24

[node name="NotchLbl" type="Label" parent="CanvasLayer/Center/VBoxContainer"]
margin_right = 289.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "Top Notch: 0"

[node name="BottomSafeInsetLbl" type="Label" parent="CanvasLayer/Center/VBoxContainer"]
margin_top = 62.0
margin_right = 289.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
text = "Bottom Safe Inset: 0"

[node name="TopNotch" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
color = Color( 1, 0, 0, 1 )
